kubernetes/nginx-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
  namespace: idm
  labels:
    app: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
