kubernetes/nginx-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello-ingress
  namespace: idm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/regex-target: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: bookml.com
    http:
      paths:
      - path: /example(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-hello-service
            port:
              number: 80
